Remove the Erlang files as I have switched to Clojure

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Some sample Erlang code while I work through Paul Wilmott - Introduces Quantitative Finace.
+Some sample Clojure code while I work through Paul Wilmott - Introduces Quantitative Finace.
