Basic request logging using Jetty classes, and configure IP/PORT (See: APP_IP, APP_PORT environment variables)

--- a/README
+++ b/README
@@ -27,3 +27,8 @@ not work.
 
 sudo apt-get install python-dev pip
 sudo pip install --upgrade fabric
+
+Resources
+---------
+* http://mmcgrana.github.com/2010/07/develop-deploy-clojure-web-applications.html
+
